# CourseProject

./: .gitignore  README.md
front/: package-lock.json  package.json
front/src/: App.css  App.jsx  Table.jsx  main.jsx
front/src/Notifications/: Notification.jsx  NotificationProvider.jsx
front/src/pages/: AddData.jsx  AddShedule.jsx  EditShedule.jsx  Login.jsx  Logout.jsx  Register.jsx  Shedule.jsx
front/src/provider/: authProvider.js
front/src/routes/: ProtectedRoute.jsx  index.jsx
restAPI/: CMakeList.txt  CMakeLists.txt  sp_db.sql
restAPI/src/: Error.cpp  Error.h  Formats.h  Group.h  Shedule.h  Subject.h  Teacher.h  User.h  db_utils.cpp  db_utils.h  main.cpp
